# TColDB

./: CMakeLists.txt
TestData/: CreateAndDrop.sql  CreateAndShow.sql  Join.sql  Select.sql
src/: main.cpp
src/Columns/: CMakeLists.txt  Chunk.h  ColID.h  Column.h  ColumnDesc.cpp  ColumnDesc.h  RowID.h  Table.cpp  Table.h  TableCreator.cpp  TableCreator.h  TableID.h  TableMeta.cpp  TableMeta.h  Tuple.cpp  Tuple.h  TupleCreator.cpp  TupleCreator.h  TupleDesc.cpp  TupleDesc.h  defs.h
src/Columns/Field/: BoolField.cpp  BoolField.h  CMakeLists.txt  CharField.cpp  CharField.h  Convertion.cpp  Convertion.h  DateField.cpp  DateField.h  DoubleField.cpp  DoubleField.h  Field.h  FieldWrapper.h  FieldsCreator.cpp  FieldsCreator.h  IntField.cpp  IntField.h  LazyField.cpp  LazyField.h  NullField.cpp  NullField.h  StringField.h  VarcharField.cpp  VarcharField.h
src/Columns/Operations/: CMakeLists.txt  TupleOperations.cpp  TupleOperations.h
src/Common/: CMakeLists.txt  Client.cpp  Client.h  ClientFactory.h  Command.cpp  Command.h  CommandWrap.cpp  CommandWrap.h  Common.h  ID.h  Server.cpp  Server.h  defs.h
src/Common/tests/: CMakeLists.txt  ServerUnitTest.cpp  testdata1.sql
src/Compression/: CMakeLists.txt  DateCoder.cpp  DateCoder.h  DoubleCoder.cpp  DoubleCoder.h  IntCoder.cpp  IntCoder.h  StringCoder.cpp  StringCoder.h  defs.h
src/Compression/tests/: CMakeLists.txt  DateCoderUnitTest.cpp  DoubleCoderUnitTest.cpp  IntCoderUnitTest.cpp  StringCoderUnitTest.cpp
src/Concurrency/: CMakeLists.txt  TransactionID.cpp  TransactionID.h  TransactionManager.cpp  TransactionManager.h
src/Databases/: CMakeLists.txt  Catalog.cpp  Catalog.h  Database.cpp  Database.h
src/Executor/: Aggerator.h  Aggregator.cpp  Aggregator.h  CMakeLists.txt  Executor.cpp  Executor.h  ExecutorContext.cpp  ExecutorContext.h  Operator.h  Predicator.cpp  Predicator.h  Projector.cpp  Projector.h  SeqScan.h  defs.h
src/Executor/Operators/: Aggregator.cpp  Aggregator.h  CMakeLists.txt  Operator.h  Predicator.cpp  Predicator.h  Projector.cpp  Projector.h  Updator.cpp  Updator.h  defs.h
src/Optimizer/: CMakeLists.txt  Optimizer.cpp  Optimizer.h  Rule.h
src/Optimizer/Rules/: CMakeLists.txt  ConstOptimize.cpp  ConstOptimize.h  JoinDecompress.cpp  JoinDecompress.h  PredicatePushDown.cpp  PredicatePushDown.h  Rule.cpp  Rule.h
src/Parser/: ASTCommit.cpp  ASTCommit.h  ASTCreateInfo.cpp  ASTCreateInfo.h  ASTCreator.cpp  ASTCreator.h  ASTDeleteInfo.cpp  ASTDeleteInfo.h  ASTDropTableInfo.cpp  ASTDropTableInfo.h  ASTExit.cpp  ASTExit.h  ASTExprNode.cpp  ASTExprNode.h  ASTFieldItem.cpp  ASTFieldItem.h  ASTInsertInfo.cpp  ASTInsertInfo.h  ASTSelectInfo.cpp  ASTSelectInfo.h  ASTSetOutput.cpp  ASTSetOutput.h  ASTShowTableInfo.cpp  ASTShowTableInfo.h  ASTTableConstraint.cpp  ASTTableConstraint.h  ASTTableDef.cpp  ASTTableDef.h  ASTTableJoinInfo.cpp  ASTTableJoinInfo.h  ASTUpdateInfo.cpp  ASTUpdateInfo.h  CMakeLists.txt  ColumnRef.cpp  ColumnRef.h  ExprNode.cpp  ExprNode.h  FieldDef.cpp  FieldDef.h  FieldType.h  (+17 more)
src/Parser/Expression/: CMakeLists.txt  Expression.cpp  Expression.h  Operations.cpp  Operations.h
src/Plan/: AggeratePlan.h  AggregatePlan.cpp  AggregatePlan.h  CMakeLists.txt  DeletePlan.cpp  DeletePlan.h  FilterPlan.cpp  FilterPlan.h  JoinPlan.cpp  JoinPlan.h  Plan.cpp  Plan.h  PlanContext.cpp  PlanContext.h  PlanOperations.cpp  PlanOperations.h  PlanParentDeletor.h  PlanVisitor.h  PlansCreator.cpp  PlansCreator.h  ProjectPlan.cpp  ProjectPlan.h  RenameTable.cpp  RenameTable.h  ScanPlan.cpp  ScanPlan.h  SelectPlan.h  UpdatePlan.cpp  UpdatePlan.h  defs.h
src/Plan/Operations/: CMakeLists.txt  ColumnsEliminate.cpp  ColumnsEliminate.h  ParentDeletor.cpp  ParentDeletor.h  PlanOperations.cpp  PlanOperations.h  SetFieldsNo.cpp  SetFieldsNo.h  TreeOperations.cpp  TreeOperations.h  TupleDescOrigin.cpp  TupleDescOrigin.h  TupleDescSetEnd.cpp  TupleDescSetEnd.h  TupleDescSetPrevious.cpp  TupleDescSetPrevious.h
src/Storages/: BufferPool.cpp  BufferPool.h  CMakeLists.txt  ColumnBlock.cpp  ColumnBlock.h  ColumnBlockCreator.cpp  ColumnBlockCreator.h  ColumnBlockID.h  ColumnBlockMeta.cpp  ColumnBlockMeta.h  ColumnBlockStatistics.h  DeSerialization.cpp  DeSerialization.h  InMemoryTable.cpp  InMemoryTable.h  Makefile  OnDiskColumn.cpp  OnDiskColumn.h  OnDiskTable.cpp  OnDiskTable.h  Serialization.cpp  Serialization.h  Slice.cpp  Slice.h  cmake_install.cmake  defs.h
src/ThreePart/: CMakeLists.txt
src/ThreePart/BoolArray/: BoolArray.h  CMakeLists.txt
src/ThreePart/CRoaring/: CMakeLists.txt  roaring.c  roaring.h  roaring.hh
src/ThreePart/CityHash101/: CMakeLists.txt  city.cc  config.h
src/Utils/: AdaptiveMap.h  Bitset.h  BloomFilter.cpp  BloomFilter.h  CMakeLists.txt  ConcurrentHashSet.h  GetSQLFromFile.h  LRUCache.h  Logger.h  MultiVersion.h  ObjectPool.h  ProductConsumerQueue.cpp  ProductConsumerQueue.h  StringUtils.h  ThreadPool.cpp  ThreadPool.h  VectorUtils.h
src/Utils/tests/: AdaptiveMapUnitTest.cpp  BloomFilterUnitTest.cpp  CMakeLists.txt  LRUCacheUnitTest.cpp
