add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/tests)
set(HEADERS
	${HEADERS}
    PARENT_SCOPE
)

set(SOURCE
	${SOURCE}
	${CMAKE_CURRENT_SOURCE_DIR}/DateCoder.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/DoubleCoder.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/IntCoder.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/StringCoder.cpp
	PARENT_SCOPE
)
