add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/Expression)
find_package(FLEX REQUIRED)
find_package(BISON REQUIRED)

BISON_TARGET(sql_yy
	${CMAKE_CURRENT_SOURCE_DIR}/sql.y
	${CMAKE_CURRENT_BINARY_DIR}/sql.tab.cc
)

FLEX_TARGET(sql_lex
	${CMAKE_CURRENT_SOURCE_DIR}/sql.l
	${CMAKE_CURRENT_BINARY_DIR}/sql.yy.cc
)

include_directories(${CMAKE_CURRENT_BINARY_DIR})
include_directories(${CMAKE_CURRENT_SOURCE_DIR})

ADD_FLEX_BISON_DEPENDENCY(sql_lex sql_yy)

add_library(sql_parser
	${BISON_sql_yy_OUTPUT_SOURCE}
	${FLEX_sql_lex_OUTPUTS}
	${BISON_sql_yy_OUTPUT_HEADER}
)

set(SOURCE
	${SOURCE}
	${CMAKE_CURRENT_SOURCE_DIR}/ASTCreateInfo.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/ASTCreator.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/ASTDeleteInfo.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/ASTDropTableInfo.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/ASTExit.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/ASTInsertInfo.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/ASTSelectInfo.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/ASTSetOutput.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/ASTShowTableInfo.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/ASTUpdateInfo.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/ColumnRef.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/execute.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/ExprNode.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/FieldDef.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/SQLTranslator.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/TableConstraint.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/TableFrom.cpp
	PARENT_SCOPE
)

set(HEADERS
	${HEADERS}
	${CMAKE_CURRENT_SOURCE_DIR}/defs.h
	${CMAKE_CURRENT_SOURCE_DIR}/execute.h
	${CMAKE_CURRENT_SOURCE_DIR}/SQLParser.h
	PARENT_SCOPE
)
